2000-11-03  Richard Braakman  <dark@wapit.com>

	* gw/wsp_headers.c: If an Expires header has an invalid date, then
	encode it as a date far in the past.  We can't just skip the header
	because RFC2068 says such a response should be treated as already
	expired, and we have to tell the client to do that.

	* gw/wsp_headers.c: Make sure that a Multi-octet-integer is always
	at least one octet long, even if its value is 0.

2000-11-01  Kalle Marjola  <rpr@wapit.com>

	* gwlib/conffile.c (config_sanity_check): fixed that 'otaconfig'
	is accepted, too, thanks to Philip Psiloinis for pointing this out

	* gw/bb_smsc.c: make sure that lists are emptied

2000-11-01  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: handles message lengths of 8*n+1 properly.
	Added comments to encode7bituncompressed().

2000-10-30  Richard Braakman  <dark@wapit.com>

	* gw/wap-appl.c: Support for X-WAP.TOD header, needed for WAP 1.1
	conformance.  (requirement UACache-0010)

	* gw/wsp_headers.c: Special encoding for X-WAP.TOD, which is
	an application-specific header with a field encoding that does
	not match the application-specific-value rule.  (This is a
	contradiction in the spec).

	* gwlib/http.[ch]: Make http_header_remove_all report how many
	headers it removed.
      
2000-10-27  Richard Braakman  <dark@wapit.com>

	* Making release 0.12.1.

2000-10-26  Richard Braakman  <dark@wapit.com>

	* gw/wap-appl.c: Use http_header_combine instead of
	http_append_headers to combine session and request headers,
	to get the semantics right according to WAE section 8.

	* gwlib/http.c: Implemented http_header_combine.

	* test/test_headers.c: Added a test of http_header_combine.

2000-10-25  Richard Braakman  <dark@wapit.com>

	* wmlscript/wsstree.[ch], wmlscript/wslexer.c: Fix parsing of
	integer literal -2147483648.

2000-10-24  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml: filled SMPP smsc group fields,
	thanks for Mikael Gueck for patch.
